--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
+    <script src="js/promise-polyfill.js"></script>
 </body>
 </html>
