--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Simple JS App</title>
 </head>
 <body>
+    <h1>Pokedex</h1>
     <div class="modal-container"></div>
     <ul class="pokemon-list"></ul>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
